--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ body {
   font-family: "Montserrat";
   text-align: center;
    overflow: auto;
-   overflow-y: scroll;
+   overflow-x: scroll;
  webkit-overflow-scrolling: touch;
 }
 
