--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,9 @@
 body {
   font-family: "Montserrat";
   text-align: center;
+  overflow: auto;
+  overflow-x: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 h1, h2, h3, h4, h5, h6 {
